--- a/Fraktaalikone/pom.xml
+++ b/Fraktaalikone/pom.xml
@@ -13,6 +13,11 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+	<dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.27.2.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
